@@ -1,5 +1,6 @@
 2018-11-24 Franz Holzinger <franz@ttproducts.de>
 
+    * core change: plugin icon wizard
     * changes: constants.txt and setup.txt
 
 2018-11-23 Franz Holzinger <franz@ttproducts.de>
